# multi_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
agents/: __init__.py  docu.py  host.py  project_manager.py
agents/Dev/: developer.py
agents/Host/: host.py
agents/PM/: project_manager.py
agents/Report/: report.py
agents/graph/: core_graph.py  system_graph.py
app/: main.py
configs/: settings.py
docker/: atlassian_mcp.yml  github_mcp.yml  mcp-atlassian.env.example
graph/: build_graph.py
services/: atlassian_mcp.py  github_mcp.py  test_tools.py
src/agents/: __init__.py  langgraph.json
src/agents/Host/: host.py
src/agents/PM/: graph.py
src/agents/QA/: qa.py
src/agents/confluence/: confluence.py  graph.py
src/agents/graph/: core_graph.py
src/agents/host/: graph.py  host.py  state.py
src/agents/jira/: graph.py  jira.py
src/agents/master/: core_graph.py
src/agents/pm/: graph.py  pm.py  project_manager.py  state.py
src/agents/qa/: graph.py  qa.py
src/agents/test_agent/: test.py
src/configs/: base.yml  config_loader.py
src/services/: atlassian_mcp.py  github_mcp.py  mcp_server.py  qodo_cover_tool.py  task_manager.py  test_mcp.py  test_tools.py
src/utils/: create_supervisor.py
tests/: host_agent.py
